fix review cutoff on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -19,7 +19,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 #reviews {
    position: center;
-   width: 75%;
+   width: 100%;
    height: auto;
 }
 #facebook{
